--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -80,10 +80,10 @@ myTweet.on('change',
   function(/* this event holds information about the change: */ e) {
     // Let ourselves know that something was changed:
     console.info('Something in this tweet model was changed!');
-    console.log(e);
+    console.dir(e);
 
     // Write code to log the changed attribute:
-    console.log(myTweet.message);
+    console.log(this.changedAttributes());
   }
 );
 
