--- a/tutorial/1-rendering.html
+++ b/tutorial/1-rendering.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script>
-// Now it is your turn.  
+// Now it is your turn.
 
 /* Here is what you start with:
  * You have a function. When you call it with a message argument,
@@ -49,8 +49,7 @@ var renderSomethingOnThePage = function(message) {
 };
 
 // Let's try it out:
-renderSomethingOnThePage(
-  'This is an example of how to use our rendering method.');
+// renderSomethingOnThePage('This is an example of how to use our rendering method.');
 
 /* Here are a few more examples. Every call to our rendering function (above)
  * will draw something to the page using the template defined in that function:
@@ -76,7 +75,7 @@ renderSomethingOnThePage(
  * _Confused about what `extend` means or does? This is all about the prototype
  * and inhertance. If you're stuck, halp yourself a teacher to explain._
  */
-var Message = Backbone.Model.extend({  
+var Message = Backbone.Model.extend({
   /* Our messages should have two methods that someone could call.
    * The first one, `initialize`, is specific to Backbone.
    *
@@ -84,7 +83,8 @@ var Message = Backbone.Model.extend({
    * you could depend on that function being called once the data comes back
    * from the server. In Backbone, if you define a function and
    * call it `initialize`, Backbone will call that function
-   * everytime you create a new model from the class that the
+   * everytime you create a new model
+    from the class that the
    * initialize function is defined on.
    *
    * In this case, anytime you use `new Message`, the object/model created
@@ -101,7 +101,10 @@ var Message = Backbone.Model.extend({
      * Putting it into the initialize function let's us be sure that
      * all models that are created will have event listeners on them.
      */
-    this.on(YOUR CODE HERE);
+    this.on('change:message', function(event) {
+      console.dir(event);
+      renderSomethingOnThePage(this.get('message'));
+    });
     /* It is your turn to write the event handler.
      *
      * Make an event listener that will listen for a `change` in this model's
@@ -141,6 +144,7 @@ var myNewMessage = new Message();
 
 // ...and then make a change on that model to see it render
 myNewMessage.set({message: 'someMessage'});
+myNewMessage.alertThisMessage();
 
 
 /* Once the model is rendering on the `change` event, move on to step 3!
