--- a/tutorial/3-collections.html
+++ b/tutorial/3-collections.html
@@ -51,6 +51,7 @@ var CommentView = Backbone.View.extend({
         '<span class="votes">',
           this.model.get('votes'),
         '</span>',
+        '<br>',
         '<span class="comment">',
           this.model.get('message'),
         '</span>',
@@ -110,7 +111,7 @@ var CommentsView = Backbone.View.extend({
     /* Render each model in the collection as a list item (<li>).
      * Remember, we have the underscore functions: */
     this.$el.find('ul').append(this.collection.map(function(comment) {
-      // YOUR CODE HERE
+      return `<li>${comment.get('message')}</li>`;
     }));
 
     return this.$el;
@@ -134,7 +135,7 @@ var comments = new Comments(commentList);
 var commentsView = new CommentsView({ collection: comments });
 
 // Append it to the page (uncomment this when you are ready):
-// $('body').append(commentsView.render());
+$('body').append(commentsView.render());
     </script>
   </body>
 </html>
